app/teamchikynbitts-app/k8s/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamchikynbitts-app
  namespace: default
  labels:
    app: teamchikynbitts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamchikynbitts
  template:
    metadata:
      labels:
        app: teamchikynbitts
    spec:
      containers:
        - name: app
          image: 347788108263.dkr.ecr.us-east-1.amazonaws.com/teamchikynbitts-app:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: teamchikynbitts-app
  namespace: default
spec:
  selector:
    app: teamchikynbitts
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teamchikynbitts-app
  namespace: default
spec:
  rules:
    - host: team-app.44.213.121.222.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teamchikynbitts-app
                port:
                  number: 80
